kubernetes/main/apps/observability/victoria/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle
  namespace: observability
spec:
  ingressClassName: "internal"
  rules:
    - host: &host vmsingle.rafaribe.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vmsingle-victoria
                port:
                  name: http
  tls:
    - hosts:
        - *host
